migrated to nyssa package

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 .DS_Store
+# blade packages directory and files
+.blade/
+*.nyp
+
+# popular editors
+.vscode/
+.idea/
+.vs/
+
+# c object files (for C extensions)
+*.o
+*.ko
+*.obj
+*.elf
+
+# log files
+*.log
